fixed cursor on mobile

--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@
 }
 body {
   background-color: var(--background-color);
-  cursor: none;
 }
 * {
   padding: 0;
@@ -183,7 +182,26 @@ text {
 
 }
 @media screen and (min-width: 48em) {
+  body {
+    cursor: none;
+
+  }
   .projects {
     display: flex;
+  }
+  
+}
+@media screen and (max-width: 48em) {
+  .cursor {
+    display: none;
+
+  }
+  .cursor--large {
+    display: none;
+
+  }
+  .cursor--small {
+    display: none;
+
   }
 }
